# advent-of-code

./: .gitignore  .gitmodules  ARCHITECTURE.md  BENCHMARKS.md  README.md  USAGE.md  justfile  package.json  pnpm-lock.yaml
.zed/: debug.json  settings.json
benchmarks/2018/01/: rust.json
benchmarks/2020/01/: js.json
cli/: .env.example  config.json  go.mod  justfile  main.go
cli/cmd/: benchmark.go  completion.go  download.go  generate.go  readme.go  root.go  workflow.go
scripts/: download-input.js  package.json  pnpm-lock.yaml  tsconfig.json
scripts/src/: benchmark.ts  download-input.ts  download-markdown.ts  generate-benchmark.ts  generate-readme.ts  generate-templates.ts
solutions/js/: jsconfig.json  justfile  language.json  main.js  package.json  pnpm-lock.yaml
solutions/rust/: Cargo.toml  justfile  language.json
solutions/rust/aoc_2018/: Cargo.toml
solutions/rust/aoc_2018/src/: day_01.rs
solutions/rust/aoc_2022/: Cargo.toml
solutions/rust/aoc_2022/src/: day_01.rs
solutions/rust/aoc_2023/: Cargo.toml
solutions/rust/aoc_2023/src/: day_01.rs
solutions/rust/aoc_2024/: Cargo.toml
solutions/rust/aoc_2024/src/: day_01.rs  day_02.rs  day_03.rs  day_11.rs  day_14.rs  day_18.rs  day_19.rs  day_20.rs  day_22.rs  day_23.rs  lib.rs
solutions/rust/common/: Cargo.toml
solutions/rust/common/src/: answer.rs  lib.rs  misc.rs  part.rs  solution.rs
solutions/rust/src/: args.rs  common.rs  main.rs
solutions/rust/src/commands/: benchmark.rs  list.rs  mod.rs  run.rs
solutions/rust/src/years/year_2022/: day_01.rs
templates/: generate-templates.js
(+148 files in other folders)
