[workspace]
members = ["aoc_2022", "aoc_2023", "aoc_2024", "common"]
resolver = "2"

[package]
name = "shrumpf-aoc"
version = "0.1.0"
edition = "2021"

[workspace.package]
version = "0.1.0"
edition = "2021"
publish = false
repository = "https://github.com/shrumpf/advent-of-code"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
needless_return = "allow"
allow_attributes_without_reason = "warn"
clone_on_ref_ptr = "warn"
dbg_macro = "warn"
renamed_function_params = "warn"
todo = "warn"

[dependencies]
aoc_2018 = { path = "aoc_2018" }
aoc_2022 = { path = "aoc_2022" }
aoc_2023 = { path = "aoc_2023" }
aoc_2024 = { path = "aoc_2024" }

chrono = "0.4.23"
anyhow = "1.0.93"
clap = { version = "4.5.21", features = ["derive"] }
common = { path = "common" }

[workspace.dependencies]
anyhow = "1.0.93"
regex = "1.11.1"
itertools = "0.13.0"
